# adrus

./: Cargo.toml  GNUmakefile  README.md  adrus.toml  compile_commands.json  shell.nix
.cache/clangd/index/: audio.c.6D428B6079C3F75E.idx  audio.c.DE3546592EB23429.idx  cmdline.c.DD09B09C94AB7171.idx  cmdline.h.45AE8A1E02C32D60.idx  db.c.9DBD4EF13CA70331.idx  db.h.5B8678D02B6A9925.idx  err.c.4219A28A8315D1EE.idx  err.c.C853D0A8F23A4D14.idx  hash.c.C32F21A42FC7EF69.idx  hash.c.C4985B29DF99B9B7.idx  io.c.B4B69557A4284C27.idx  io.c.EE0857C5D34049F8.idx  iter.c.38E3BA504587D125.idx  jbase.h.3CAA7B35D6385685.idx  jbase.h.CF7060547A76D8E9.idx  lexer.c.2D5B8B4E4D2385EA.idx  log.c.908CDA671DE275F2.idx  log.c.9BBFCBA62D5EFD73.idx  main.c.7222F2DF73F47AE6.idx  main.c.C1BD5FC63DC69F32.idx  parse.c.3A1E975B28544884.idx  parse.h.1C2F63C9C8E6BB04.idx  synth.c.9DECCCD430A81E19.idx  synth.c.FD6CD676ADDC449D.idx  util.c.30508D96EBF77C83.idx  util.c.9775C4CA61C2F5E2.idx  util.c.97FD31421A73FC01.idx  util.h.5B126DC5C91F9FAB.idx  vm.c.A0803522F7DC17AD.idx  vm.c.C9AA3C495A9EAB51.idx
adrus/: cmdline.c  cmdline.h  db.c  db.h  main.c  parse.c  parse.h  util.c  util.h
doc/: database.typ  design.typ  plan.md
jbase/: audio.c  err.c  hash.c  io.c  iter.c  lexer.c  log.c  vm.c
src/: main.rs
test/: hey-whats-up
test/lang/: arabic.txt  english  foo.txt
